--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,28 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <title>Code with DSC</title>
+
+<!-- <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '3078822612169173',
+      cookie     : true,
+      xfbml      : true,
+      version    : 'v6.0'
+    });
+      
+    FB.AppEvents.logPageView();   
+      
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
