--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="icon" href="./favicon.ico" type="image/icon type">
     <title>Code with DSC</title>
 
 <!-- <script>
