meta tags added and linkedin, fb link in FAQs

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <!-- Meta Tags For SEO -->
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description"
+    content="The DSC VIT Summer Challenge to help you learn Tech, the practical way. Take part in our daily and weekly tasks to get exciting swags!">
+  <meta name="theme-color" content="#000000" />
+  <meta name="keywords"
+    content="Code With DSC,Leaderboard,DSC VIT,Challenge,Coding,Develop,Tech,DeveloperStudentClubs,VIT,Tasks,100 Days of Code">
+  <meta name="author" content="Ashutosh and Riddhi">
+  <meta name="copyright" content="DSC VIT">
+  <meta name="language" content="en">
+  <meta name="url" content="https://codewith.dscvit.com/">
+  <meta name="category" content="Tribute">
+  <meta name="coverage" content="Worldwide">
+  <meta name="rating" content="General">
+  <meta name="og:email" content="dscvitvellore@gmail.com">
+  <meta name="og:country-name" content="India">
+  <meta name="og:region" content="Vellore">
+  <meta name="og:site_name" content="DSC VIT">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="DSC VIT">
+  <meta property="og:description"
+    content="The DSC VIT Summer Challenge to help you learn Tech, the practical way. Take part in our daily and weekly tasks to get exciting swags!">
+  <meta property="og:url" content="https://codewith.dscvit.com/">
+  <meta property="og:site_name" content="Code With DSC">
+  <meta name="twitter:card" content="website">
+  <meta name="twitter:site" content="Code With DSC">
+  <meta name="twitter:title" content="DSC VIT">
+  <meta name="twitter:description"
+    content="The DSC VIT Summer Challenge to help you learn Tech, the practical way. Take part in our daily and weekly tasks to get exciting swags!">
+  <meta name="twitter:creator" content="@dscvit">
+  <meta itemprop="name" content="Code With DSC">
+  <meta itemprop="description"
+    content="The DSC VIT Summer Challenge to help you learn Tech, the practical way. Take part in our daily and weekly tasks to get exciting swags!">
+  <link rel="canonical" href="https://codewith.dscvit.com/">
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -26,11 +57,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="icon" href="./favicon.ico" type="image/icon type">
-    <title>Code with DSC</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="icon" href="./favicon.ico" type="image/icon type">
+  <title>Code with DSC</title>
 
-<!-- <script>
+  <!-- <script>
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '3078822612169173',
@@ -51,11 +82,12 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script> -->
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -65,5 +97,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
